# NSDF-INTERSECT

./: .env.example  .gitignore  Dockerfile.dashboard  Dockerfile.dashboard_service  Dockerfile.storage_service  LICENSE  Makefile  README.md  compose.yaml  compose_local.yaml  config.yaml  config_service.yaml  constants.py  dagger.json  dashboard.py  dashboard_client.py  dashboard_service.py  environment.yaml  load_gsas.py  pytest.ini  realtime_client.py  short_list_of_data.txt  single_client.py  storage_service.py  transition_client.py
.dagger/: go.mod  main.go
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
GSAS/: NOM168361tof.gsa  NOM168362tof.gsa  NOM168365tof.gsa  NOM168367tof.gsa  NOM168368tof.gsa  NOM168369tof.gsa  NOM168370tof.gsa  NOM168371tof.gsa  NOM168372tof.gsa  NOM168373tof.gsa  NOM168375tof.gsa  NOM168376tof.gsa  NOM168377tof.gsa  NOM168378tof.gsa  NOM168379tof.gsa  NOM168380tof.gsa  NOM168381tof.gsa  NOM168382tof.gsa  NOM168383tof.gsa  NOM168384tof.gsa  NOM168385tof.gsa  NOM168386tof.gsa  NOM168387tof.gsa  NOM168388tof.gsa  (+16 more)
services/nsdf_intersect_dashboard/: Dockerfile  dashboard.py  gsa_loader.py  pyproject.toml  pytest.ini
services/nsdf_intersect_dashboard/src/nsdf_intersect_dashboard/: dashboard.py
services/nsdf_intersect_dashboard/src/tests/: test_dashboard.py
services/nsdf_intersect_dashboard/tests/: conftest.py  test_dashboard.py
services/nsdf_intersect_dashboard/tests/fixtures/andie_volume/: andie.txt
services/nsdf_intersect_dashboard/tests/fixtures/scientist_cloud_volume/: 1743619501_NOM168374tof.gsa  andie.txt
(+59 files in other folders)
