[project]
name = "nsdf-intersect-dashboard"
version = "0.1.0"
description = "NSDF-INTERSECT Dashboard for Neutron Diffraction Experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "panel==1.6.0",
    "pyyaml",
    "numpy",
    "plotly==6.0.0"
]

[dependency-groups]
test = [
    "pytest>=8.4.1",
]
